# Kriel2026_ssd_nl

./: .gitignore  DEPENDENCY_NOTICE.txt  README.md  pyproject.toml
data/Mach0.1Re1500Pm1Nres576v1/: stage1_fitted_posterior_samples.npy  stage1_output_posterior_samples.npy  stage2_fitted_posterior_samples.npy
datasets/: summary.json
estimate_ssd_phases/: dev_integral_ssd.py  dev_mcmc.py  mcmc_fit_energy.py  phase_separate_using_gradients.py  script.py  test.py  using_gradients.py  using_mcmc.py  utils.py
playground/estimate_ssd_phases/: script.py
scripts/: alpha_scaling.py  check_alpha_scaling.py  collect_data.py  collect_sim_data.py  compare_model_fits.py  fit_with_mcmc.py  mcmc_fitter.py  mcmc_routine.py  my_utils.py  plot_alpha_scaling.py  plot_gamma_scaling.py  plot_nl_exponent.py  plot_scalings.py  submit_mcmc_jobs.py
scripts/aggregate_stats/: extract_mcmc_stats.py  print_summary_table.py
scripts/build_datasets/: collect_sim_data.py  collect_sim_dataset.py  extract_mcmc_summary_stats.py  extract_sim_summary.py  print_summary_table.py
scripts/data/: Re500Mach0.5Pm1576.csv  Re500Mach0.5Pm1576v2.csv  Re500Mach0.5Pm1576v3.csv  Re500Mach0.5Pm1576v4.csv  Re500Mach0.5Pm1576v5.csv
scripts/fit_posteriors/: fit_all_sims.py  fit_with_mcmc.py  submit_fitting_jobs.py
scripts/fit_time_evolution/: fit_with_mcmc.py  submit_mcmc_jobs.py
scripts/mcmc_fitting/: fit_with_mcmc.py  submit_fitting_jobs.py
scripts/my_mcmc_routine/: base_mcmc.py  mcmc_stage_1.py  mcmc_stage_2.py  plot_final_fits.py  plot_model_fits.py  plot_model_posteriors.py
(+136 files in other folders)
