[project]
name = "kriel2025-ssd-sat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loki",
  "bifrost",
  "vegtamr",
  "emcee>=3.1.6",
  "corner>=2.2.3",
]

[tool.uv.sources]
loki = { path = "../../sindri/loki" }
bifrost = { path = "../../sindri/bifrost" }
vegtamr = { path = "../../sindri/vegtamr" }
