[project]
name = "kriel-2025-ssd-nl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jormi",
  "ww_flash_sims",
  "emcee>=3.1.6",
  "corner>=2.2.3",
]

[tool.uv.sources]
jormi = { path = "../../sindri/python/submodules/jormi" }
ww_flash_sims = { path = "../../sindri/python/ww_flash_sims" }